--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -224,7 +224,7 @@ ul li {
 }
 
 .bg-image-1 {
-  background: url(../images/backgrounds/bg-1.jpg) no-repeat center center/cover;
+  background: url(../images/backgrounds/bg-1.png) no-repeat center center/cover;
 }
 .bg-image-1::before {
   background-color: rgba(0, 0, 0, 0.7);
@@ -455,12 +455,13 @@ ul li {
 /* 
  * 6.7 Section: Schedule
  */
+
 .partner {
   background-color: #f8f8f8;
 }
 .partner .partner-box {
   display: block;
-  opacity: 0.3;
+  opacity: 0.5;
   height: 150px;
   width: 150px;
   margin: 25px auto;
