update images links

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -230,7 +230,7 @@ ul li {
 }
 
 .bg-image-1 {
-  background: url(../images/backgrounds/bg-1.png) no-repeat center center/cover;
+  background: url(https://github.com/widsrecife/site-alternative/blob/gh-pages/assets/images/backgrounds/bg-1.svg) no-repeat center center/cover;
 }
 .bg-image-1::before {
   background-color: rgba(0, 0, 0, 0.7);
